<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/colorWhite"
    app:cardCornerRadius="10dp"
    app:cardElevation="3dp"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="275dp"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:weightSum="2">

            <View
                android:layout_width="0dp"
                android:layout_height="0dp" />

            <ImageButton
                android:id="@+id/image_button_notifier_dialog"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:padding="16dp"
                android:layout_alignParentStart="true"
                app:srcCompat="@drawable/ic_twotone_account_circle_24"
                android:contentDescription="@string/bell" />

            <ImageButton
                android:id="@+id/image_button_close_dialog"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:padding="16dp"
                android:tint="@color/colorGreyDark"
                android:layout_alignParentEnd="true"
                app:srcCompat="@drawable/ic_close"
                android:contentDescription="@string/closedialog" />

        </RelativeLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="2dp"/>

        <LinearLayout
            android:gravity="center"
            android:orientation="vertical"
            android:padding="2dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                app:srcCompat="@drawable/ic_twotone_email_24"
                android:contentDescription="@string/app_name" />

            <TextView
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/colorGreyDark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textSize="18sp"
                android:fontFamily="@font/google_sans_700"
                android:textStyle="bold"
                android:text="@string/email_verification"/>

            <TextView
                android:textColor="@color/colorGreyDark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="italic"
                android:layout_gravity="center_horizontal"
                android:text="@string/required" />

        </LinearLayout>

        <TextView
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/colorGreyDark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="normal"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="@font/google_sans_400"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:text="@string/email_verification_description"/>

        <Button
            android:id="@+id/button_inbox_dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gmail_inbox"
            android:textAllCaps="false"
            android:fontFamily="@font/google_sans_700"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_gravity="center_horizontal"
            android:layout_margin="16dp"/>

    </LinearLayout>

</androidx.cardview.widget.CardView>
