<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/colorWhite"
    app:cardCornerRadius="10dp"
    app:cardElevation="3dp"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="275dp"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:weightSum="2">

            <View
                android:layout_width="0dp"
                android:layout_height="0dp" />

            <ImageButton
                android:id="@+id/image_button_notifier_dialog"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:padding="16dp"
                android:layout_alignParentStart="true"
                app:srcCompat="@drawable/ic_twotone_file_24"
                android:contentDescription="@string/bell" />

            <ImageButton
                android:id="@+id/image_button_close_dialog"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:padding="16dp"
                android:layout_alignParentEnd="true"
                app:srcCompat="@drawable/ic_close"
                android:contentDescription="@string/closedialog" />

        </RelativeLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="2dp"/>

        <LinearLayout
            android:gravity="center"
            android:orientation="vertical"
            android:padding="2dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                app:srcCompat="@drawable/ic_twotone_report_problem_24"
                android:contentDescription="@string/app_name" />

            <TextView
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/colorGreyDark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textStyle="bold"
                android:textSize="18sp"
                android:fontFamily="@font/google_sans_700"
                android:text="@string/error_pdf"/>

        </LinearLayout>

        <TextView
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/colorGreyDark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="normal"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/google_sans_400"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:text="@string/error_pdf_file"/>

        <TextView
            android:id="@+id/text_view_pdf_error_size"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/colorGreyDark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="normal"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/google_sans_700"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:text="@string/_00mb"/>

        <View
            android:background="@color/colorGreyDark"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"/>

        <LinearLayout
            android:id="@+id/linear_layout_buttons_dialog"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2"
            android:layout_margin="16dp"
            tools:ignore="UselessParent">

            <Button
                android:id="@+id/button_negative_dialog"
                android:layout_width="0dp"
                android:layout_weight="1.0"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:textAllCaps="false"
                android:textColor="@color/colorPrimary"
                android:fontFamily="@font/google_sans_700"
                android:background="?selectableItemBackground"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_marginEnd="16dp" />

            <Button
                android:id="@+id/button_positive_dialog"
                android:text="@string/download"
                android:textAllCaps="false"
                android:layout_width="0dp"
                android:layout_weight="1.0"
                android:textColor="@color/colorPrimary"
                android:fontFamily="@font/google_sans_700"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <ProgressBar
            android:id="@+id/progress_bar_dialog"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:padding="8dp"
            android:visibility="gone"/>

        <ImageView
            android:id="@+id/image_button_success_dialog"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:padding="8dp"
            app:srcCompat="@drawable/ic_twotone_check_24"
            android:contentDescription="@string/success_dialog"
            android:visibility="gone"
            app:tint="@color/Accent" />

    </LinearLayout>

</androidx.cardview.widget.CardView>
